# gamelib-chess

./: .gitignore  MANIFEST.in  README.md  main.py  model.py  requirements.txt  scenes.py  setup.cfg  stockfish.py
assets/: LICENSE-pieces.html
chess/: main.py  scenes.py  stockfish.py
chess/assets/: source.txt
chess/shaders/: loading.glsl  pieces.glsl
shaders/: board.glsl  fade.glsl  lighting.glsl  overlay.glsl
