[metadata]
name = gamelib-chess
version = 0.0.1
description = a chess demo for the gamelib library 
long_description = file: README.md
long_description_content_type = text/markdown
author = Jeffrey Pepin
url = https://github.com/peffjepin/gamelib-chess
platforms =
    windows
    linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    chess
install_requires =
    gamelib==0.0.3
python_requires = >= 3.8
include_package_data = yes
zip_safe = no


[options.entry_points]
console_scripts = 
    play-chess = chess.main:main
